--- a/web/webapp-client/public/index.html
+++ b/web/webapp-client/public/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 
-  <title>webapp-client</title>
+  <title>DevCon 18</title>
 </head>
 
 <body>
