--- a/web/webapp-client/public/index.html
+++ b/web/webapp-client/public/index.html
@@ -11,7 +11,7 @@
   <title>DevCon 18</title>
 </head>
 
-<body>
+<body unselectable="true">
   <noscript>
     <strong>We're sorry but webapp-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
